--- a/task_manager/locale/ja/LC_MESSAGES/django.po
+++ b/task_manager/locale/ja/LC_MESSAGES/django.po
@@ -19,8 +19,9 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 #: accounts/admin.py:34
 msgid "Permissions"
-msgstr ""
+msgstr "権限管理"
 
 #: accounts/admin.py:37
 msgid "Important dates"
-msgstr ""
+msgstr "重要な日程"
+
